<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Erastus Nzula"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#27EDE9E9"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/inputView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:focusable="auto"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom|end"
            android:scrollbars="horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/outputView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|end"
            android:scrollbars="horizontal"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/clear"
                style="@style/clearButton"
                android:background="@drawable/buttons_background"
                android:text="@string/clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#43A047"
                android:textSize="35sp" />

            <Button
                android:id="@+id/sin"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:fontFamily="serif"
                android:text="@string/pi"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/button7"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/seven"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/divide"
                style="@style/operators"
                android:background="@drawable/buttons_background"
                android:text="@string/divide"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#43A047"
                android:textSize="35sp" />

            <Button
                android:id="@+id/cos"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/sqrt"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/button8"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/eight"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/multiply"
                style="@style/operators"
                android:background="@drawable/buttons_background"
                android:text="@string/multiply"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#43A047"
                android:textSize="35sp" />

            <Button
                android:id="@+id/tan"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/exponential"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/button9"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/nine"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/backSpace"
                style="@style/BackSpaceButton"
                android:background="@drawable/buttons_background"
                android:text="@string/backspace"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#43A047"
                android:textSize="35sp" />

            <Button
                android:id="@+id/power"
                style="@style/operators"
                android:background="@drawable/buttons_background"
                android:text="@string/power"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#43A047"
                android:textSize="35sp" />

            <Button
                android:id="@+id/minus"
                style="@style/operators"
                android:background="@drawable/buttons_background"
                android:text="@string/minus"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#43A047"
                android:textSize="35sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/button4"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/four"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/button1"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/one"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/buttonPercentage"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/percentage"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button5"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/five"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/button2"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:fontFamily="serif"
                android:text="@string/two"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/button0"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/zero"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button6"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/six"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/button3"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/three"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/decimal"
                style="@style/numberButtons"
                android:background="@drawable/buttons_background"
                android:text="@string/decimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/plus"
                style="@style/operators"
                android:background="@drawable/buttons_background"
                android:text="@string/plus"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#43A047"
                android:textSize="35sp" />

            <Button
                android:id="@+id/equals"
                style="@style/equalsButton"
                android:background="@drawable/round_button"
                android:text="@string/equals"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>